2002-08-26  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/paginate_psprint.c (print_page): Fixed color of clip
	region.

2002-08-26  Cyrille Chepelov  <cyrille@chepelov.org>

	* sheets/Makefile.am: enabled intltool-merge translation cache for
	sheets.

	* Makefile.am:
	* mkauthors-placeholder:
	* AUTHORS: revived that file (in a placeholder form) so that
	automake stops yelling.
	(derived from a patch by Andrew Ferrier <andrew@new-destiny.co.uk>) 
	(Closes: #91144)

	Heh, by the way, thanks Christophe. I feel better now.
	
2002-08-25  Christophe Merlet  <christophe@merlet.net>

	* app/command.c: Removed invalid multibyte sequence in Chepelov.

2002-08-24  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/dia_image.c (dia_image_rgb_data): 
	Bugfixes in image data retrieval.
	
	* app/render_eps.c: Refactoring of new_*_renderer.

2002-08-23  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_eps.c: 
	* lib/dia_image.h: 
	* lib/dia_image.c: Support for rowstride != width (odd width images)

2002-08-20  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/paper.c (get_paper_info): Fixed NULL prefs problem.
	* plug-ins/xfig/xfig-import.c: Removed assertion.

2002-08-18  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/paper.c: Removed app/preferences.h reference.

2002-08-14  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/svg/svg-import.c: 
	* plug-ins/xfig/xfig-import.c: 
	* lib/Makefile.am (libdia_a_SOURCES): 
	* objects/standard/Makefile.am (libstandard_objects_la_SOURCES): 
	* lib/create.h:
	* objects/standard/create.h:
	* objects/standard/polygon.c (polygon_create): 
	* objects/standard/polyline.c (polyline_create): 
	* objects/standard/beziergon.c (beziergon_create): 
	* objects/standard/bezier.c (bezierline_create): 
	Moving create.h into lib.

2002-08-13  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_libart.[ch]: Work on PNG font export.  Something's
	still fishy with the scaling, I don't get it.

	* app/display.c: 