@@ -1,5 +1,5 @@
 # Remember to also add subdirs in configure.in
-SUBDIRS = cgm pstricks hpgl wpg svg shape dxf python xfig wmf metapost $(XSLT_DIR)
+SUBDIRS = cgm pstricks hpgl wpg svg shape dxf python xfig wmf metapost xslt
 
 EXTRA_DIST = \
 	renderer.inc \
